# computer-template

./: Cargo.toml  README.md  build.rs  build.sh
spacecraft-structures/: balanced.json
src/: game_data.rs  lib.rs  plugins.rs  spacecraft_structures.rs  utils.rs
src/plugins/: build_spacecrafts.rs  spacecraft_construction.rs  spacecraft_control.rs  spacecraft_controlv2.rs
