[package]
name = "computer-ffi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
stellar-bit-core = { git="https://github.com/stellar-bit/core" }
serde = { version = "1.0.154", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
strum = { version = "0.25.0", features = ["derive"] }
egui = "0.22.0"

[lib]
name = "computer_1"
crate-type = ["cdylib"]